updated to use == instead of .equals() to compare ENUMS as an example